Swagger documentation adjustments
